Make the user-visible strings defined in KAboutData translatable again.

CCMAIL: nicolas.fella@gmx.de
BUG: 426742


(cherry picked from commit 14f9c104e23309bfc53701960284953ea23c9b77)